# SimplexSolver

./: CMakeLists.txt  README.md  main.cpp
Examples/: output0.txt
libs/: FileProcessor.cpp  FileProcessor.h  Fraction.cpp  Fraction.h  Includes.h  SolverTable.cpp  SolverTable.h  debugClass.cpp  debugClass.h
libs/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h
libs/Solver/: Solver.cpp  Solver.h
